--- a/BeamWallet/ViewControllers/Main/Wallet/WalletReceiveViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/WalletReceiveViewController.xib
@@ -49,7 +49,7 @@
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oga-aW-VoC">
                                             <rect key="frame" x="0.0" y="0.0" width="280" height="44"/>
-                                            <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <connections>
                                                 <action selector="onExpireWithSender:" destination="-1" eventType="touchUpInside" id="AK3-rX-EJg"/>
                                             </connections>
