--- a/BeamWallet/ViewControllers/PhraseViewController/Cells/WordCell.xib
+++ b/BeamWallet/ViewControllers/PhraseViewController/Cells/WordCell.xib
@@ -23,7 +23,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="140" height="38"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iW6-Bq-5xt">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iW6-Bq-5xt" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="140" height="38"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ag5-bY-KAl">
