--- a/BeamWallet/ViewControllers/Main/Wallet/WalletQRCodeViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/WalletQRCodeViewController.xib
@@ -38,7 +38,7 @@
                     </view>
                     <blurEffect style="light"/>
                 </visualEffectView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soS-x3-QUu">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soS-x3-QUu" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
                     <rect key="frame" x="20" y="73.5" width="335" height="520"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T3j-3U-bV4">
